plugins {
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id "com.gorylenko.gradle-git-properties" version "2.4.0-rc2"
    id "com.github.ben-manes.versions" version "0.40.0"
}

apply plugin: 'java'
apply plugin: 'idea'

version = '3.6.0'
group = 'com.pinewoodbuilders'
description = 'Xeus Discord Bot'
mainClassName = 'com.pinewoodbuilders.Main'

sourceCompatibility = 16
targetCompatibility = 16

ext {
    moduleName = 'Xeus'
}

shadowJar {
    getArchiveBaseName().set("Xeus.jar")

    doLast {
        copy {
            from 'build/libs/Xeus.jar'
            into '.'
        }
    }
}

tasks.withType(JavaCompile) {
    dependsOn 'clean'
    options.encoding = 'UTF-8'
    //options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
}

task fatJar(type: Jar) {
    manifest = {
        manifest.attributes 'Implementation-Title': 'Xeus: Pinewood Discord Bot',
            'Implementation-Version': getArchiveVersion(),
            'Main-Class': 'com.pinewoodbuilders.Main'
    } as Manifest

    getArchiveBaseName().set(project.name)

    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

task javadocJar(type: Jar, dependsOn: javadoc) {
    getArchiveClassifier().set('javadoc')
    from javadoc.destinationDir
}

javadoc {
    failOnError = false
    options.memberLevel = JavadocMemberLevel.PUBLIC
    options.author()
    options.encoding = 'UTF-8'
    options.addStringOption('-html5')
}

repositories {
    mavenCentral()                     // Main maven repo
    mavenLocal()                       // Useful for developing
    maven { url "https://jitpack.io" } // Build projects directly from github

    // Used for pulling down JDA and LavaPlayer
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
    maven { url "https://m2.chew.pro/releases" }
}

dependencies {
    implementation group: 'com.avairebot', name: 'Shared', version: '80809049d2'
    implementation group: 'net.dv8tion', name: 'JDA', version: '4.4.0_350'

    implementation group: 'commons-cli', name: 'commons-cli', version: '1.5.0'
    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.30'
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.14.3'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.27'
    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.36.0.3'

    implementation group: 'com.sparkjava', name: 'spark-core', version: '2.9.3'
    implementation group: 'io.prometheus', name: 'simpleclient', version: '0.14.1'
    implementation group: 'io.prometheus', name: 'simpleclient_servlet', version: '0.14.1'
    implementation group: 'io.prometheus', name: 'simpleclient_logback', version: '0.14.1'
    implementation group: 'io.prometheus', name: 'simpleclient_hotspot', version: '0.14.1'
    implementation group: 'io.prometheus', name: 'simpleclient_guava', version: '0.14.1'

    implementation group: 'com.udojava', name: 'EvalEx', version: '2.7'
    implementation group: 'com.vdurmont', name: 'emoji-java', version: '4.0.0'
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha12'
    implementation group: 'io.sentry', name: 'sentry-logback', version: '5.5.2'
    implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'

    // Chew Util
    implementation 'pw.chew:jda-chewtils:1.24.1'

    // Gitlab API
    implementation group: 'org.gitlab4j', name: 'gitlab4j-api', version: '4.19.0'
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'

    // Emoji API
    implementation group: 'com.vdurmont', name: 'emoji-java', version: '5.1.1'

    // Expiring Map API
    implementation group: 'net.jodah', name: 'expiringmap', version: '0.5.10'

    // Java Link Scanner
    implementation group: 'org.nibor.autolink', name: 'autolink', version: '0.10.0'

    // Guava
    implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'

    // Bucket4J
    implementation group: 'com.github.vladimir-bukhtoyarov', name: 'bucket4j-core', version: '7.0.0'

    //HikariCP
    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.0'

    implementation 'org.graalvm.js:js:21.3.0'
    implementation 'org.graalvm.js:js-scriptengine:21.3.0'

    // Tests
    // Only needed to run tests in a version of IntelliJ IDEA that bundles older versions
    implementation('org.junit.platform:junit-platform-launcher:1.8.2')
    implementation('org.junit.jupiter:junit-jupiter-engine:5.8.2')
    implementation('org.junit.vintage:junit-vintage-engine:5.8.2')
}

import org.apache.tools.ant.filters.ReplaceTokens

processResources {
    filesMatching("**/app.properties") {
        filter ReplaceTokens, tokens: [
            "project.version"   : project.version,
            "project.groupId"   : project.group,
            "project.artifactId": project.ext.moduleName
        ]
    }
}
